# librealsense

./: readme.md
examples/capture/: CMakeLists.txt  rs-capture.cpp
